# flask-practice

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-checks.yml  test.yml
FlaskRESTfulAPI/: app.py
SQL_Db_API/: .env.example  Makefile  README.md  TEST_RESULTS.md  pytest.ini  requirements-dev.txt  setup.cfg  test.py
SQL_Db_API/code/: app.py  security.py  user.py
SQL_Db_API/tests/: conftest.py  test_api_integration.py  test_item.py  test_security.py  test_user.py
section3/: app.py
section4/: app.py
section5/code/: app.py  data.db  item.py
