[metadata]
name = flask-restful-api
version = 0.1.0
description = Flask RESTful API with JWT authentication and SQLite
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 127
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv,
    .venv,
    *.egg-info,
    build,
    dist
ignore =
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
per-file-ignores =
    __init__.py:F401

[tool:pytest]
# This is a duplicate of pytest.ini but kept for compatibility
testpaths = tests
python_files = test_*.py

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
